--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,18 +1,24 @@
+<div align = center>
+
+<br>
+<br>
+
+
 <div class="container" align = center>
 
-<div *ngIf="isLoggedIn; else loggedOut">
+<div *ngIf="isLoggedIn; else loggedOut" align = center>
   Logged in as {{roles}}.  
 <br>
 <p style="font-family: poppins; font-size: 25px;">
   A. S. M. Radwan
 </p>
-<table>
+<table align = center>
   <div align=center>
  
        
             <div class="profile-menu" align=center>
              
-              <div class="profile-picture small-profile-picture">
+              <div class="profile-picture small-profile-picture" align = center>
                   <img width="140px" src="./../../assets/user-icon-png-pnglogocom.png">
                   
               </div>
@@ -33,10 +39,8 @@
                       <a    href="#5"  style="display: inline;"  align=center><span class="icon fontawesome-star-empty scnd-font-color"  style="display: inline;"  align=center></span>Favorites</a>
                   </li>
               </ul>
-        
-
-           
-      </div> <!-- end main-container -->
+    
+      </div>
  
 </table>
 </div>
@@ -50,7 +54,7 @@
         <input type="text" class="form-control" name="usernameOrEmail" [(ngModel)]="form.usernameOrEmail" #usernameOrEmail="ngModel"
           required />
         <div *ngIf="f.submitted && usernameOrEmail.invalid">
-          <div *ngIf="usernameOrEmail.errors?.['required']">Username is required</div>
+          <div *ngIf="usernameOrEmail.errors?.['required']" style="color: brown; font-style: italic; font-size: 13px;">Username is required</div>
         </div>
       </div>
       <div class="form-group">
@@ -58,8 +62,8 @@
         <input type="password" class="form-control" name="password" [(ngModel)]="form.password" #password="ngModel"
           required minlength="6" />
         <div *ngIf="f.submitted && password.invalid">
-          <div *ngIf="password.errors?.['required']">Password is required</div>
-          <div *ngIf="password.errors?.['minlength']">Password must be at least 6 characters</div>
+          <div *ngIf="password.errors?.['required']" style="color: brown; font-style: italic; font-size: 13px;">Password is required</div>
+          <div *ngIf="password.errors?.['minlength']" style="color: brown; font-style: italic; font-size: 13px;">Password must be at least 6 characters</div>
         </div>
       </div>
       <div class="form-group" style="padding-top: 20px;">
@@ -77,5 +81,8 @@
   </div >
   <p style="padding-bottom: 20px;"><br></p>
 </ng-template>
+
+</div>
+
 
 </div>
