--- a/src/app/post/post.component.css
+++ b/src/app/post/post.component.css
@@ -9,10 +9,6 @@ ul {
 }
 
 .container{
-    width:40%;
+    width:500px;
     align-content: space-around;
-}
-label{
-    font-size:18px;
-    left: 0;
 }
