--- a/src/styles.css
+++ b/src/styles.css
@@ -47,7 +47,7 @@ body {
     border-color:rgb(46, 43, 43);
     border-width: 1px;
     font-size: 50px;
-    cursor: not-allowed;
+    cursor: auto ;
   }
   
   .no-outline:focus {
@@ -65,9 +65,8 @@ body {
 
 .container {
   position: relative;
-
+  
   border-radius: 25px;
- 
   box-sizing: border-box;
   background: #ecf0f37c;
   box-shadow: 14px 14px 20px #cbced17c, -14px -14px 20px rgba(255, 255, 255, 0.481);
@@ -77,7 +76,7 @@ body {
 
 
 
-label, input, button, textarea {
+ input, button, textarea {
   display: block;
   width: 100%;
   padding: 0;
@@ -157,7 +156,7 @@ label{
 .fixed-header, .fixed-footer{
   position: fixed; 
   width: 100%;  
-  
+  background-color: rgba(255, 254, 254, 0.707); 
  
   
 }
@@ -172,7 +171,7 @@ label{
 }
 BODY{
   font-size: 15PX;
-  width: 1000px;
+  width:800px;
   margin-left: auto;
   margin-right: auto;
   padding-right: 0px;
