--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,5 +1,6 @@
+<div  align = center>
 
-       
+
     <br>
         <br>    <br>    <br>    <br><div class="container" align = center>
    
@@ -31,3 +32,7 @@
 
       
 </div>
+
+</div>
+       
+
