--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <nav class="navbar navbar-inverse" width=100%>
   <div class="container-fluid" width=100%>
     <div class="navbar-header" width=100%>
@@ -35,7 +37,7 @@
   </div>
    
 
-  <div class="fixed-header" style=" left: 0; height: 50px; padding-top: 0px;">
+  <div class="fixed-header" style=" left: 0; height: 50px; padding-top: 0px; ">
     <table width="100%" style="background-origin: border-box;  height:45px; padding-top: 0px;" >
         <tr  >
           <td align="left"  >  <a href="home">
