--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -43,17 +43,44 @@
           <td align="left"  >  <a href="home">
             <img src=".././././../assets/logo.png" style=" height:30px; padding-top: 10px; padding-left: 20px; "><img src="../assets/bloglogo.png" height="30px"  style=" padding-top: 10px; "> </a> 
           </td>
-         
-          
             <td style="padding-top: 9px;" >
               <input type="text" placeholder="Search.." style="padding:5px; ">
             </td>
-
-         
+            <td>
+              <div >
            
+            <details style="display: inline; padding: auto; background-color: rgba(34, 118, 182, 0.207); color: rgb(0, 0, 0);">
+            <summary style="display: inline; color: rgb(0, 0, 0);">
+              <img src="../assets/user-icon-png-pnglogocom.png" style="width:30px;"> &nbsp; <h5>A. S. M. Radwan</h5>
+            </summary>
+          
+              
+              <ul align=center>
+                <li  style="display: inline;"  align=center>
+                    <a    href="#1"  ><span class="icon entypo-cog scnd-font-color"  style="display: inline;"  align=center></span>Settings</a>
+                </li> &nbsp;
+                <li  style="display: inline;"  align=center>
+                    <a    href="#2"  ><span class="icon fontawesome-user scnd-font-color"  style="display: inline;"  align=center></span>Account</a>
+                </li > &nbsp;
+                <li  style="display: inline;"  align=center>
+                    <a    href="#3" ><span class="icon fontawesome-envelope scnd-font-color"  style="display: inline;"  align=center></span>My Blogs</a>
+                
+                </li> &nbsp;
+                <li  style="display: inline;"  align=center>
+                    <a    href="#5" ><span class="icon fontawesome-star-empty scnd-font-color"  style="display: inline;"  align=center></span>Favorites</a>
+                </li>
+            </ul>
+             </details>
+         
+            </div>
+            </td>
         </tr>
-        <tr style="height:5px;">
+        <tr style="height:5px; display: inline;">
+       
             <td>   
+              
+                  
+          
      
  <nav class="nav">
   <input class="nav__trigger-input" type="checkbox" id="trigger" aria-label="open the navigation"/>
