--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -127,7 +127,7 @@
 
                   
                   <div id="myDIV">
-                   
+<!--                    
                   
                   <div class="postmeta">  
                        <details style="display: inline; size: 50px;">
@@ -149,7 +149,6 @@
                             {{row.comments[0].body}}
                             
                            </div>
-                           <!-- <hr/> -->
           
                            <table>
                             <tr>
@@ -165,28 +164,10 @@
                             
                            </div>
                            
-
-                               
-                       
-                          
-                           <!-- <time align=right datetime="" style="font-size: small; font-style: oblique;">Commented On: January 18th, 2022 </time>   -->
-                        
                        </details>
     
-                      
-
-
-
-                          <!-- <table>
-                              <tr>
-                                  <td style="font-style: italic; font-size: 13px;">
-                                      Name:  {{row.comments[0].name}}<br>
-                                      Email: {{row.comments[0].email}}<br>
-                                  </td>
-                              </tr>
-                          </table> -->
                
-                  </div>  
+                  </div>   -->
                   <hr/>
 
 
