--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -1,4 +1,4 @@
-<!-- <div align = center>
+<div align = center>
   <br>
   <br>
 <div class="container" align = center>
@@ -77,7 +77,7 @@
 <p style="padding-bottom: 20px;"><br>&nbsp;</p>
     
 </div>
-</div> -->
+</div>
 
 
 <div align = center>
@@ -99,7 +99,7 @@
           <label for="title">Title</label>
           <input type="text" class="form-control" name="title" [(ngModel)]="form.title" #title="ngModel" required />
           <div *ngIf="f.submitted && title.invalid">
-            <div *ngIf="title.errors?.['required']" style="font-size: 13px; color: brown; font-style: italic;">Name is required</div>
+            <div *ngIf="title.errors?.['required']" style="font-size: 13px; color: brown; font-style: italic;">Title is required</div>
           </div>
         </div>
         <div class="form-group">
@@ -133,7 +133,7 @@
             Signup successful!<br/>
           </div>  -->
           <div *ngIf="f.submitted && isPostFailed" class="alert alert-warning">
-            Signup failed!<br/>{{errorMessage}}
+            Post failed!<br/>{{errorMessage}}
           </div>
         </div>
       </form>
