--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -49,9 +49,9 @@
             <td>
               <div >
            
-            <details style="display: inline; padding: auto; background-color: rgba(34, 118, 182, 0.207); color: rgb(0, 0, 0);">
+            <details style="display: inline; padding: auto; color: rgb(0, 0, 0);">
             <summary style="display: inline; color: rgb(0, 0, 0);">
-              <img src="../assets/user-icon-png-pnglogocom.png" style="width:30px;"> &nbsp; <h5>A. S. M. Radwan</h5>
+              <img src="../assets/user-icon-png-pnglogocom.png" style="width:20px; display: inline;"> &nbsp; <h4 style="display: inline;">A. S. M. Radwan</h4>
             </summary>
           
               
@@ -60,15 +60,10 @@
                     <a    href="#1"  ><span class="icon entypo-cog scnd-font-color"  style="display: inline;"  align=center></span>Settings</a>
                 </li> &nbsp;
                 <li  style="display: inline;"  align=center>
-                    <a    href="#2"  ><span class="icon fontawesome-user scnd-font-color"  style="display: inline;"  align=center></span>Account</a>
-                </li > &nbsp;
-                <li  style="display: inline;"  align=center>
                     <a    href="#3" ><span class="icon fontawesome-envelope scnd-font-color"  style="display: inline;"  align=center></span>My Blogs</a>
                 
-                </li> &nbsp;
-                <li  style="display: inline;"  align=center>
-                    <a    href="#5" ><span class="icon fontawesome-star-empty scnd-font-color"  style="display: inline;"  align=center></span>Favorites</a>
-                </li>
+                </li> 
+  
             </ul>
              </details>
          
