--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,7 +38,7 @@
    
 
   <div class="fixed-header" style=" left: 0; height: 50px; padding-top: 0px; ">
-    <table width="100%" style="background-origin: border-box;  height:45px; padding-top: 0px;" >
+    <table width="100%" style="height:45px; padding-top: 0px" >
         <tr  >
           <td align="left"  >  <a href="home">
             <img src=".././././../assets/logo.png" style=" height:30px; padding-top: 10px; padding-left: 20px; "><img src="../assets/bloglogo.png" height="30px"  style=" padding-top: 10px; "> </a> 
