--- a/src/styles.css
+++ b/src/styles.css
@@ -60,9 +60,13 @@ button{
   border-radius: 20px;
 }
 
-_ngcontent-smu-c54{
+/* _ngcontent-smu-c54{
   border-radius: 10px;
   font-size: 18px;
+} */
+
+_ngcontent-aya-c56{
+  display: block;
 }
 th{
   font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -195,6 +199,5 @@ html {
 } */
 
 ul {
-
   padding-inline-start: 0px;
 }
